Revert "fix(welcome-page): remove watermark container to avoid z-index wars"
This reverts commit 890151fa725f713dadc7be2079a8ec1762af8a94.

--- a/css/_welcome_page.scss
+++ b/css/_welcome_page.scss
@@ -162,4 +162,10 @@ body.welcome-page {
             font-size: 32px;
         }
     }
+
+    .welcome-watermark {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
 }
